[FIX] Remove z-index from header-middle

--- a/dev/styles/main/header/header.less
+++ b/dev/styles/main/header/header.less
@@ -294,11 +294,6 @@
     // padding: 10px 0;
     height: 100%;
 }
-@media (min-width: 992px) {
-    .header-middle-wrp{
-        z-index: 2500;
-    }
-}
 
 // =================================
 // Logo
